<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudTela"
    tools:context="br.com.ioasys.lucascarvalho.empresas.Activity.MainActivity">

    <ImageView
        android:id="@+id/imgMainLogo"
        android:layout_width="184.5dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvMainBemVindo"
        android:layout_width="146.5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/bemvindo"
        android:textColor="@color/cinzaCarvao"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMainLogo" />

    <TextView
        android:id="@+id/txvMainDescricao"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.5dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/descricaoapp"
        android:textColor="@color/cinzaCarvao"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvMainBemVindo" />

    <EditText
        android:id="@+id/edtMainEmail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvMainDescricao" />

    <EditText
        android:id="@+id/edtMainSenha"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_cadeado"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMainEmail" />

    <Button
        android:id="@+id/btnMainEntrar"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@color/verdeAgua"
        android:text="@string/entrar"
        android:textColor="@color/brancoPuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMainSenha"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
